# sgrep

./: .gitignore  Cargo.toml  Changelog  Dockerfile-22.04  Dockerfile-24.04  README.md  build-22.04-docker.sh  build-24.04-docker.sh  build-all.sh
scripts/: Dockerfile-22.04  Dockerfile-24.04  build-all-local.sh  build-all.sh  dist-docker.sh  pull-all.sh  push-all.sh
src/: cmd_line.rs  filter.rs  listing.rs  main.rs
test_data/: file1.txt  file2.txt
test_data/post3/: file3.md
