[package]
name = "sgrep"
description = "A simple grep util for those lazy to remember many command line options"
version = "0.1.0"
edition = "2021"
authors = ["Thiago Massari Guedes"]
license = "Apache-2.0"
homepage = "https://gitlab.com/thiagomg/sgrep"
repository = "https://gitlab.com/thiagomg/sgrep"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.7", features = ["derive", "string"] }
anyhow = "1.0.86"
colored = "2.1.0"
