[package]
name = "sgrep"
description = "A simple grep util for those lazy to remember many command line options"
version = "1.0.11"
edition = "2024"
authors = ["Thiago Massari Guedes"]
license = "Apache-2.0"
homepage = "https://thiagocafe.com/"
repository = "https://github.com/thiagomg/sgrep"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.37", features = ["derive", "string"] }
anyhow = "1.0.98"
colored = "3.0.0"
